--- a/index.ipynb
+++ b/index.ipynb
@@ -233,11 +233,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "www.vandelay.com\n"
+     ]
+    }
+   ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
     "website = 'www.'+ website\n",
