Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -233,22 +233,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "www.vandelay.com\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "website = 'vandelay.com' # 'www.vandelay.com'\n",
-    "website = 'www.'+ website"
+    "website = 'www.'+ website\n",
+    "website"
    ]
   },
   {
